--- a/index.html
+++ b/index.html
@@ -1,135 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Axiom Tutor GitPage</title>
-    <style>
-      body {
-        font-family: sans-serif;
-        padding: 2em;
-        line-height: 1.6;
-      }
-      .thm {
-        background-color: #ffdddd;
-        border-left: 4px solid #ee0000;
-        padding: 1em;
-        margin: 1em 0;
-      }
-      .def {
-        background-color: #ddffdd;
-        border-left: 4px solid #008800;
-        padding: 1em;
-        margin: 1em 0;
-      }
-      a {
-        color: #1e90ff;
-      }
-    </style>
-    <script>
-      window.MathJax = {
-        tex: {
-          inlineMath: [
-            ["$", "$"],
-            ["\\(", "\\)"],
-          ],
-        },
-        svg: { fontCache: "global" },
-      };
-    </script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
-      async
-    ></script>
-    
-  <!---->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects Hub</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #333;
-            color: white;
-            padding: 1rem 2rem;
-            text-align: center;
-        }
-        main {
-            padding: 2rem;
-            max-width: 900px;
-            margin: auto;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        section {
-            margin-bottom: 2rem;
-        }
-        h2 {
-            color: #333;
-            border-bottom: 2px solid #ddd;
-            padding-bottom: 0.5rem;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            background: #fafafa;
-            margin-bottom: 0.5rem;
-            padding: 0.75rem;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        li:hover {
-            background: #e0e0e0;
-        }
-        a {
-            text-decoration: none;
-            color: #007acc;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            text-align: center;
-            margin-top: 3rem;
-            color: #666;
-            font-size: 0.9rem;
-        }
-    </style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Axiom Tutor GitHub</title>
+
+  <style>
+    :root {
+      --primary-color: #007acc;
+      --background-light: #f8f9fa;
+      --background-white: #ffffff;
+      --text-color: #333;
+      --accent-light: #e9ecef;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--background-light);
+      color: var(--text-color);
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: var(--primary-color);
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: var(--background-white);
+      border-radius: 10px;
+      padding: 2rem;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
+    }
+
+    section {
+      margin-bottom: 2.5rem;
+    }
+
+    h2 {
+      color: var(--primary-color);
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      border-bottom: 2px solid var(--accent-light);
+      padding-bottom: 0.3rem;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    li {
+      background: var(--accent-light);
+      margin: 0.5rem 0;
+      padding: 0.75rem 1rem;
+      border-radius: 6px;
+      transition: background 0.3s;
+    }
+
+    li:hover {
+      background: #dbe5f1;
+    }
+
+    a {
+      color: var(--primary-color);
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1.05rem;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
+    footer a {
+      color: inherit;
+      margin: 0 0.5rem;
+    }
+  </style>
 </head>
+
 <body>
 
 <header>
-    <h1>Welcome to Axiom Tutor's GitHub Page</h1>
+  <h1>Axiom Tutor GitHub Page</h1>
 </header>
 
 <main>
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="https://axiomtutor.github.io/acira">A Course in Real Analysis ... in Marimo!</a></li>
-        </ul>
-    </section>
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li><a href="https://axiomtutor.github.io/acira">A Course in Real Analysis ... in Marimo!</a></li>
+    </ul>
+  </section>
 
-    <section>
-        <h2>YouTube Playlists</h2>
-        <ul>
-            <li><a href="https://www.youtube.com/playlist?list=PLcwjc2OQcM4toj7goLuBNg3lqWheujLjY">A Course in Real Analysis</a></li>
-            <li><a href="https://www.youtube.com/playlist?list=PLcwjc2OQcM4t0iNqMka93HCM4I2HWyNgp">A Course in Discrete Mathematics</a></li>
-        </ul>
-    </section>
+  <section>
+    <h2>YouTube Playlists</h2>
+    <ul>
+      <li><a href="https://www.youtube.com/playlist?list=PLcwjc2OQcM4toj7goLuBNg3lqWheujLjY">A Course in Real Analysis</a></li>
+      <li><a href="https://www.youtube.com/playlist?list=PLcwjc2OQcM4t0iNqMka93HCM4I2HWyNgp">A Course in Discrete Mathematics</a></li>
+    </ul>
+  </section>
 </main>
 
 <footer>
-    <p><a href="https://github.com/axiomtutor">GitHub Repo</a> | <a href="https://youtube.com/@AxiomTutor">YouTube Channel</a></p>
+  <p>
+    <a href="https://github.com/axiomtutor">GitHub Account</a> |
+    <a href="https://youtube.com/@AxiomTutor">YouTube Channel</a>
+  </p>
 </footer>
 
-
-  </body>
+</body>
 </html>
